# fancy

./: pyproject.toml
fancy/: __init__.py  fancy.py
