[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fancy"
version = "0.0.1"
authors = [
  { name="Lauri Koikkalainen", email="lauri.koikkalainen@ntnu.no" },
]
description = "A silly example"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["nbgrader"]
